# ezkl-ffi

./: .gitignore  Makefile  README.md  ezkl-ffi.yml  go.mod
cgo/: cgo.go  cgo_helpers.go
example/: go.mod  main.go  pk.key  vk.key
rust/: Cargo.toml  build.rs  cbindgen.toml  rust-toolchain
rust/src/: lib.rs  util.rs
