[package]
name = "ezkl-ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ezkl = { version = "10.4.2", git = "https://github.com/zkonduit/ezkl" }
libc = "0.2.154"

[build-dependencies]
cbindgen = "= 0.26.0"
